# ptnt-v

./: LICENSE  README.md  ptnt-launch.sh  pyproject.toml
configs/: figure3.yaml  figure3_q2t10.yaml  noise_pink.yaml  ptnt-launch.sh  spillage.yaml
notebook/: Coherent Gate Error.ipynb  PTNT_Sanity_Check_Tutorial.ipynb
notebook/.ipynb_checkpoints/: 00_Figure3_CodeFirst_Tutorial-checkpoint.ipynb  00_Figure3_Tutorial-checkpoint.ipynb  00_Overview_and_Quickstart-checkpoint.ipynb  00_Quickstart_Figure3-checkpoint.ipynb  01_Building_Circuits-checkpoint.ipynb  01_Circuit_Templates-checkpoint.ipynb  02_Generating_Shadow_Data-checkpoint.ipynb  02_Noise_and_PinkDrift-checkpoint.ipynb  03_Preprocessing_Operator_Arrays-checkpoint.ipynb  03_Shadow_Preprocessing-checkpoint.ipynb  04_PEPO_to_LPDO-checkpoint.ipynb  04_Process_Tensor_Model-checkpoint.ipynb  05_Training_MLE_Causality-checkpoint.ipynb  06_Evaluation_and_Reporting-checkpoint.ipynb  06_Validation_and_Report-checkpoint.ipynb  07_Contraction_Options_Perf-checkpoint.ipynb  07_Contraction_Strategies-checkpoint.ipynb  08_Control_Noise_Tutorial-checkpoint.ipynb  09_Spillage_Tutorial-checkpoint.ipynb  10_CLI_and_Config-checkpoint.ipynb  11_Troubleshooting_and_Env-checkpoint.ipynb  Coherent Gate Error-checkpoint.ipynb  PTNT_Sanity_Check_Tutorial-checkpoint.ipynb
ptnt/: cli.py  utilities.py
ptnt/circuits/: noise_models.py  templates.py  utils.py
ptnt/io/: report.py  (+1 more)
scripts/: make_sanity_notebook.py  run_figure3.sh  run_noise_pink.sh  run_spillage.sh
tests/: test_likelihood_small.py  test_shadow_pipeline.py  test_shapes.py
(+15 files in other folders)
